@@ -1,2 +1,1 @@
 Remove deprecated MonteCarlo, ImportanceSampling, QuasiMonteCarlo, RandomizedQuasiMonteCarlo, RandomizedLHS aliases in 1.12
-Remove deprecated SobolIndicesAlgorithm::Generate method in 1.11
